--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-18  Ulrich Drepper  <drepper@cygnus.com>
+
+	* sysdeps/unix/sysv/linux/init-first.h: Add extra cast in argc
+	assignment to avoid warning on 64bit platforms.
+
 1999-06-17  Ulrich Drepper  <drepper@cygnus.com>
 
 	* libio/libio.h (_IO_codecvt): Change __P ot __PMT.
