--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 1999-06-18  Ulrich Drepper  <drepper@cygnus.com>
 
-	* iconv/gconv_open.c: Inlcude string.h for memset prototype.
+	* sunrpc/xdr_sizeof.c (x_inline): Cleanup pointer assignments.
+
+	* iconv/gconv_open.c: Include string.h for memset prototype.
 
 	* libio/libioP.h (FILEBUF_LITERAL): Add missing parameter to macro
 	definitions.
