--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-20  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* libio/libio.h: Fix last patch.
+
 1999-06-20  Ulrich Drepper  <drepper@cygnus.com>
 
 	* libio/libio.h (_IO_putwc): Correct type of first argument.
