--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-21  Ulrich Drepper  <drepper@cygnus.com>
+
+	* include/wchar.h: Use __gnuc_va_list not va_list in prototype.
+
 1999-06-18  Thorsten Kukuk  <kukuk@suse.de>
 
 	* sysdeps/alpha/atomicity.h: Correct counting of subsections.
