--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-22  Geoff Keating  <geoffk@ozemail.com.au>
+
+	* sysdeps/powerpc/strcmp.S: Don't return a zero result if the high
+	bits of two words differ.
+
 1999-06-21  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
 
 	* libio/Makefile (routines): Add putwchar and putwchar_u.
