--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-06-22  Ulrich Drepper  <drepper@cygnus.com>
+
+	* manual/io.texi. Fix typos.
+	* manual/stdio.texi: Likewise.
+	Patches by Brian Youmans <3diff@gnu.org>.
+
 1999-06-22  Geoff Keating  <geoffk@ozemail.com.au>
 
 	* sysdeps/powerpc/strcmp.S: Don't return a zero result if the high
