--- a/manual/stdio.texi
+++ b/manual/stdio.texi
@@ -195,7 +195,7 @@ the only part you are guaranteed will be understood by all systems.
 The GNU C library defines one additional character for use in
 @var{opentype}: the character @samp{x} insists on creating a new
 file---if a file @var{filename} already exists, @code{fopen} fails
-rather than opening it.  If you use @samp{x} you can are guaranteed that
+rather than opening it.  If you use @samp{x} you are guaranteed that
 you will not clobber an existing file.  This is equivalent to the
 @code{O_EXCL} option to the @code{open} function (@pxref{Opening and
 Closing Files}).
@@ -212,7 +212,7 @@ meaningful in other systems.
 If the open fails, @code{fopen} returns a null pointer.
 
 When the sources are compiling with @code{_FILE_OFFSET_BITS == 64} on a
-32 bits machine this function is in fact @code{fopen64} since the LFS
+32 bit machine this function is in fact @code{fopen64} since the LFS
 interface replaces transparently the old interface.
 @end deftypefun
 
@@ -230,7 +230,7 @@ Locks}.
 @deftypefun {FILE *} fopen64 (const char *@var{filename}, const char *@var{opentype})
 This function is similar to @code{fopen} but the stream it returns a
 pointer for is opened using @code{open64}.  Therefore this stream can be
-used even on files larger then @math{2^31} bytes on 32 bits machines.
+used even on files larger then @math{2^31} bytes on 32 bit machines.
 
 Please note that the return type is still @code{FILE *}.  There is no
 special @code{FILE} type for the LFS interface.
@@ -276,7 +276,7 @@ streams and open new ones with @code{fopen}.  But other systems lack
 this ability, so using @code{freopen} is more portable.
 
 When the sources are compiling with @code{_FILE_OFFSET_BITS == 64} on a
-32 bits machine this function is in fact @code{freopen64} since the LFS
+32 bit machine this function is in fact @code{freopen64} since the LFS
 interface replaces transparently the old interface.
 @end deftypefun
 
@@ -284,7 +284,7 @@ interface replaces transparently the old interface.
 @comment Unix98
 @deftypefun {FILE *} freopen64 (const char *@var{filename}, const char *@var{opentype}, FILE *@var{stream})
 This function is similar to @code{freopen}.  The only difference is that
-on 32 bits machine the stream returned is able to read beyond the
+on 32 bit machine the stream returned is able to read beyond the
 @math{2^31} bytes limits imposed by the normal interface.  It should be
 noted that the stream pointed to by @var{stream} need not be opened
 using @code{fopen64} or @code{freopen64} since its mode is not important
@@ -335,11 +335,11 @@ is written and any buffered input is discarded.  The @code{fcloseall}
 function returns a value of @code{0} if all the files were closed
 successfully, and @code{EOF} if an error was detected.
 
-This function should be used only in special situation, e.g., when an
+This function should be used only in special situations, e.g., when an
 error occurred and the program must be aborted.  Normally each single
-stream should be closed separately so that problems with one stream can
-be identified.  It is also problematic since the standard streams
-(@pxref{Standard Streams}) will also be closed.
+stream should be closed separately so that problems with individual
+streams can be identified.  It is also problematic since the standard
+streams (@pxref{Standard Streams}) will also be closed.
 
 The function @code{fcloseall} is declared in @file{stdio.h}.
 @end deftypefun
@@ -426,6 +426,9 @@ messages.  For example:
 @smallexample
 puts ("This is a message.");
 @end smallexample
+
+@noindent
+outputs the text @samp{This is a message.} followed by a newline.
 @end deftypefun
 
 @comment stdio.h
@@ -1231,7 +1234,7 @@ This modifier was introduced in @w{ISO C 9x}.
 Specifies that the argument is a @code{size_t}.
 
 @samp{z} was introduced in @w{ISO C 9x}.  @samp{Z} is a GNU extension
-predating this addition and should not be used anymore in new code.
+predating this addition and should not be used in new code.
 @end table
 
 Here is an example.  Using the template string:
@@ -1297,7 +1300,7 @@ of the result and a decimal-point character appears only if it is
 followed by a digit.
 
 The @samp{%a} and @samp{%A} conversions are meant for representing
-floating-point number exactly in textual form so that they can be
+floating-point numbers exactly in textual form so that they can be
 exchanged as texts between different programs and/or machines.  The
 numbers are represented is the form
 @w{[@code{-}]@code{0x}@var{h}@code{.}@var{hhh}@code{p}[@code{+}|@code{-}]@var{dd}}.
@@ -3185,7 +3188,7 @@ The function is an extension defined in the Unix Single Specification
 version 2.
 
 When the sources are compiled with @code{_FILE_OFFSET_BITS == 64} on a
-32 bits system this function is in fact @code{ftello64}.  I.e., the
+32 bit system this function is in fact @code{ftello64}.  I.e., the
 LFS interface transparently replaces the old interface.
 @end deftypefun
 
@@ -3242,7 +3245,7 @@ The function is an extension defined in the Unix Single Specification
 version 2.
 
 When the sources are compiled with @code{_FILE_OFFSET_BITS == 64} on a
-32 bits system this function is in fact @code{fseeko64}.  I.e., the
+32 bit system this function is in fact @code{fseeko64}.  I.e., the
 LFS interface transparently replaces the old interface.
 @end deftypefun
 
@@ -3396,7 +3399,7 @@ In the GNU system, @code{fpos_t} is equivalent to @code{off_t} or
 @code{long int}.  In other systems, it might have a different internal
 representation.
 
-When compiling with @code{_FILE_OFFSET_BITS == 64} on a 32 bits machine
+When compiling with @code{_FILE_OFFSET_BITS == 64} on a 32 bit machine
 this type is in fact equivalent to @code{off64_t} since the LFS
 interface transparently replaced the old interface.
 @end deftp
@@ -3423,7 +3426,7 @@ it returns a nonzero value and stores an implementation-defined positive
 value in @code{errno}.
 
 When the sources are compiled with @code{_FILE_OFFSET_BITS == 64} on a
-32 bits system the function is in fact @code{fgetpos64}.  I.e., the LFS
+32 bit system the function is in fact @code{fgetpos64}.  I.e., the LFS
 interface transparently replaced the old interface.
 @end deftypefun
 
@@ -3451,7 +3454,7 @@ of zero.  Otherwise, @code{fsetpos} returns a nonzero value and stores
 an implementation-defined positive value in @code{errno}.
 
 When the sources are compiled with @code{_FILE_OFFSET_BITS == 64} on a
-32 bits system the function is in fact @code{fsetpos64}.  I.e., the LFS
+32 bit system the function is in fact @code{fsetpos64}.  I.e., the LFS
 interface transparently replaced the old interface.
 @end deftypefun
 
