--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-06-23  Ulrich Drepper  <drepper@cygnus.com>
 
+	* sysdeps/generic/fpu_control.c: Include math.h for __P definition.
+
 	* posix/getopt.h: Include stdio.h.
 
 	* manual/arith.texi: Document restriction of ndigit parameter of
