--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-24  Ulrich Drepper  <drepper@cygnus.com>
+
+	* misc/tst-efgcvt.c (ecvt_tests): Test 92.0 with ndigits == 16.
+	* misc/efgcvt_r.c (ecvt_r): Limit ndigits before passing it to fcvt_r.
+
 1999-06-24  Thorsten Kukuk  <kukuk@suse.de>
 
 	* nscd/grpcache.c: Add "notfound" data to cache, not iov pointer.
