--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-25  Roland McGrath  <roland@baalperazim.frob.com>
+
+	* mach/Versions (libc: GLIBC_2.0): Add __mig_strncpy.
+
 1999-06-25  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* nscd/connections.c (nscd_run): Use correct type for optlen variable.
