--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-30  Ulrich Drepper  <drepper@cygnus.com>
+
+	* wcsmbs/wcsrchr.c: Fix handling of L'\0' parameter.
+	* wcsmbs/wcschr.c: Likewise.
+
 1999-06-28  Ulrich Drepper  <drepper@cygnus.com>
 
 	* sysdeps/libm-ieee754/e_gamma_r.c: Initialize *signgamp for NaN
