--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 1999-06-30  Ulrich Drepper  <drepper@cygnus.com>
 
+	* pwd/getpw.c: Add warning since no buffer size is given and
+	therefore no overrun tests are possible.
+
+1999-06-30  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* pwd/pwd.h: Add getpw prototype declaration.
+
+1999-06-30  Ulrich Drepper  <drepper@cygnus.com>
+
 	* wcsmbs/wcsrchr.c: Fix handling of L'\0' parameter.
 	* wcsmbs/wcschr.c: Likewise.
 
